Creation des Classe Revision, Talk, WikiAPICaller. WikiAPICaller est une abstraction des appels a l'API MediaWiki.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Grisou | Wiki contributions Project version E2014</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+    <link rel="stylesheet" href="css/jquery-ui.css" />
   </head>
   <body>
     <div id="header">
@@ -59,12 +59,10 @@
         </div>
       </div>
     <script src="script/jquery-1.8.2.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+    <script src="script/jquery-ui.js"></script>
     <script src="script/diff_match_patch.js"></script>
     <script src="script/contributions-diff.js"></script>
-    <script src="script/contributions-script-ap.js"></script>
+    <script src="script/contributions-script.js"></script>
     <script src="script/WikiHelper.js"></script>
-    <script src="script/ModulePattern.js"></script>
-    
   </body>
 </html>
