--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
           <div id="article"> ...</div>
         </div>
       </div>
-    <script src="script/jquery-1.8.2.min.js"></script>
+    <script src="js/externals/jquery-1.8.2.min.js"></script>
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-    <script src="script/diff_match_patch.js"></script>
-    <script src="script/contributions-diff.js"></script>
-    <script src="script/contributions-script-ap.js"></script>
-    <script src="script/WikiHelper.js"></script>
-    <script src="script/ModulePattern.js"></script>
+    <script src="js/externals/diff_match_patch.js"></script>
+    <script src="js/contributions-diff.js"></script>
+    <script src="js/contributions-script-ap.js"></script>
+    <script src="js/controllers/controller-wiki.js"></script>
+    <script src="js/examples/js/modulePattern.js"></script>
     
   </body>
 </html>
