--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <title>Grisou | Wiki contributions Project version E2014</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+  	
+  	<!-- Script import -->
+  	<!-- Models -->
+    <script src="js/models/revision.js"></script>
+    <script src="js/models/talk.js"></script>
+    <!-- Controllers -->
+    <script src="js/controllers/controller-wiki.js"></script>
+    <script src="js/contributions-diff.js"></script>
+    <!-- Externals -->
+    <script src="js/externals/jquery-1.8.2.min.js"></script>
+    <script src="js/externals/jquery-ui.js"></script>
+    <script src="js/externals/diff_match_patch.js"></script>
+    <!-- Views -->
+    <script src="js/contributions-script-ap.js"></script>
   </head>
   <body>
     <div id="header">
@@ -58,12 +72,5 @@
           <div id="article"> ...</div>
         </div>
       </div>
-    <script src="js/externals/jquery-1.8.2.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-    <script src="js/externals/diff_match_patch.js"></script>
-    <script src="js/contributions-diff.js"></script>
-    <script src="js/contributions-script-ap.js"></script>
-    <script src="js/controllers/controller-wiki.js"></script>
-    <script src="js/examples/modulePattern.js"></script>
   </body>
 </html>
