--- a/index.html
+++ b/index.html
@@ -1,76 +1,80 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Grisou | Wiki contributions Project version E2014</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-  	
-  	<!-- Script import -->
-  	<!-- Models -->
-    <script src="js/models/revision.js"></script>
-    <script src="js/models/talk.js"></script>
-    <!-- Controllers -->
-    <script src="js/controllers/controller-wiki.js"></script>
-    <script src="js/contributions-diff.js"></script>
-    <!-- Externals -->
-    <script src="js/externals/jquery-1.8.2.min.js"></script>
-    <script src="js/externals/jquery-ui.js"></script>
-    <script src="js/externals/diff_match_patch.js"></script>
-    <!-- Views -->
-    <script src="js/contributions-script-ap.js"></script>
-  </head>
-  <body>
-    <div id="header">
-      <h1>GRISOU</h1>
-      <h2>continious review reporter by VOGG 2013 version E2014</h2>
-    </div>
-    <div id="search_panel">
-      <div id="search_div">
-        <input class="input" type="text" id="user" value="gestion.grisou" placeholder="Username or ip of the contributor" title="Enter the username or ip address of the contributor."/>
-        <input class="input" type="text" id="url" value="wiki.grisou.ca" placeholder="Wikipedia web site" title="Enter the url for the wikipedia web site the contributor has contributed to (without the http://), Example: en.wikipedia.org"/>
-        <button id="btn_send" onclick="getJsonWiki();">Send</button>
-      </div>
-      <div id="advanced_search_container">
-        <div id="advance_search_box">
-          <div id="advanced_search_elems_container" class="hidden_advance">
-            From: <input type="text" id="datepicker_from" class="input">
-            To: <input type="text" id="datepicker_to" class="input">
-            No minor edit: <input type="checkbox" id="minorEdit">
-          </div>
-        </div>
-        <button id="btn_advanced_search">Advanced search</button>
-      </div>
-    </div>
-    <div id="result">
-      <div id="titre"></div>
-      <div id="tabs">
-        <ul>
-          <li><a href="#list_articles">Articles</a></li>
-          <li><a href="#list_talks">Talks</a></li>
-        </ul>
-      <div id="list_articles">
-        <div id="articles"></div>
-      </div>
-      <div id="list_talks">
-        <div id="talks"></div>
-      </div>
-    </div>
-      <div id="tab_article">
-        <ul>
-          <li><a href="#detail_container">Details</a></li>
-          <li><a href="#article_container">Article</a></li>
-        </ul>
-        <img src="" id="loading" alt="loading">
-        <div id="detail_container">
-          <div style="background-color: #F1F5E9; padding-bottom: 10px; box-shadow: 0px 0px 10px rgba(0, 0, 0, .2), inset 0px 0px 10px rgba(0, 0, 0, .2);">
-            <div id="article_head"></div>
-            <div id="contr_value"></div>
-            <div id="contr_survived"></div>
-          </div>
-        </div>
-        <div id="article_container">
-          <div id="article"> ...</div>
-        </div>
-      </div>
-  </body>
+<head>
+<title>Grisou | Wiki contributions Project version E2014</title>
+<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet"
+	href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+</head>
+<body>
+	<div id="header">
+		<h1>GRISOU</h1>
+		<h2>continious review reporter version Feb2015</h2>
+	</div>
+	<div id="search_panel">
+		<div id="search_div">
+			<input class="input" type="text" id="user" value="gestion.grisou"
+				placeholder="Username or ip of the contributor"
+				title="Enter the username or ip address of the contributor." /> <input
+				class="input" type="text" id="url" value="wiki.grisou.ca"
+				placeholder="Wikipedia web site"
+				title="Enter the url for the wikipedia web site the contributor has contributed to (without the http://), Example: en.wikipedia.org" />
+			<button id="btn_send" onclick="getJsonWiki();">Send</button>
+		</div>
+		<div id="advanced_search_container">
+			<div id="advance_search_box">
+				<div id="advanced_search_elems_container" class="hidden_advance">
+					From: <input type="text" id="datepicker_from" class="input">
+					To: <input type="text" id="datepicker_to" class="input"> No
+					minor edit: <input type="checkbox" id="minorEdit">
+				</div>
+			</div>
+			<button id="btn_advanced_search">Advanced search</button>
+		</div>
+	</div>
+	<div id="result">
+		<div id="titre"></div>
+		<div id="tabs">
+			<ul>
+				<li><a href="#list_articles">Articles</a></li>
+				<li><a href="#list_talks">Talks</a></li>
+			</ul>
+			<div id="list_articles">
+				<div id="articles"></div>
+			</div>
+			<div id="list_talks">
+				<div id="talks"></div>
+			</div>
+		</div>
+		<div id="tab_article">
+			<ul>
+				<li><a href="#detail_container">Details</a></li>
+				<li><a href="#article_container">Article</a></li>
+			</ul>
+			<div id="detail_container">
+				<div
+					style="background-color: #F1F5E9; padding-bottom: 10px; box-shadow: 0px 0px 10px rgba(0, 0, 0, .2), inset 0px 0px 10px rgba(0, 0, 0, .2);">
+					<div id="article_head"></div>
+					<div id="contr_value"></div>
+					<div id="contr_survived"></div>
+				</div>
+				<div id="ArticleLoading"></div>
+			</div>
+			<div id="article_container">
+				<div id="article">...</div>
+			</div>
+		</div>
+		<!-- Models -->
+		<script src="js/models/revision.js"></script>
+		<script src="js/models/talk.js"></script>
+		<!-- Controllers -->
+		<script src="js/controllers/controller-wiki.js"></script>
+		<script src="js/contributions-diff.js"></script>
+		<!-- Externals -->
+		<script src="js/externals/jquery-1.8.2.min.js"></script>
+		<script src="js/externals/jquery-ui.js"></script>
+		<script src="js/externals/diff_match_patch.js"></script>
+		<!-- Views -->
+		<script src="js/contributions-script-ap.js"></script>
+</body>
 </html>
