Correctif pour le chargement

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<div id="contr_value"></div>
 					<div id="contr_survived"></div>
 				</div>
-				<div id="ArticleLoading"></div>
+				<div id="article_loading"></div>
 			</div>
 			<div id="article_container">
 				<div id="article">...</div>
